# cg_lab8

./: .gitignore  README.md  main.py  pyproject.toml  run_animation.py  run_lbs_lab.py
outputs/: summary.txt
src/: lbs.py
